force-app/main/default/objects/Case/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TAM Secondary</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>User.Account_Manager__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>