force-app/main/default/objects/Case/fields/Account_Region__c.field-meta.xml
<CustomField>
    <fullName>Account_Region__c</fullName>
    <label>Account Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>