force-app/main/default/objects/Case/fields/Activity_on_Closed_Case__c.field-meta.xml
<CustomField>
    <fullName>Activity_on_Closed_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox gets automatically checked a Comment/Email/Attachment is added to the Case and Case is closed.</description>
    <label>Activity on Closed Case</label>
    <type>Checkbox</type>
</CustomField>