force-app/main/default/objects/Case/fields/Assigned_to_Business_Critical_Queue__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_Business_Critical_Queue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag will be check when a Case is assigned to Business Critical Queue in its lifetime.</description>
    <label>Assigned to Business Critical Queue</label>
    <type>Checkbox</type>
</CustomField>