force-app/main/default/objects/Case/fields/Case_Age_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Case_Age_in_Days__c</fullName>
    <description>Case Age in Days</description>
    <formula>IF(IsClosed, (ClosedDate - CreatedDate), (NOW() - CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Case Age in Days</inlineHelpText>
    <label>Case Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>