force-app/main/default/objects/Case/fields/Case_Closer_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Case_Closer_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SDS-2860: This field is used to for Internal Case with Type Reseller or End Customer. It is to track whether closer email is sent or not.</description>
    <label>Case Closer Email Sent</label>
    <type>Checkbox</type>
</CustomField>