force-app/main/default/objects/Case/fields/Case_Comment_Owner__c.field-meta.xml
<CustomField>
    <fullName>Case_Comment_Owner__c</fullName>
    <label>Case Comment Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>