force-app/main/default/objects/Case/fields/Case_Count__c.field-meta.xml
<CustomField>
    <fullName>Case_Count__c</fullName>
    <description>To count up the number of case records</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>To count up the number of case records</inlineHelpText>
    <label>Case Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>