force-app/main/default/objects/Case/fields/Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner__c</fullName>
    <label>L1/L2 Owner Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>