force-app/main/default/objects/Case/fields/Case_ReOpen_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Case_ReOpen_DateTime__c</fullName>
    <description>This datetime field get automatically populated whenever a Case is reopened.</description>
    <label>Case Re-open Date/Time</label>
    <type>DateTime</type>
</CustomField>