force-app/main/default/objects/Case/fields/CaseOwnerLoggedInUser__c.field-meta.xml
<CustomField>
    <fullName>CaseOwnerLoggedInUser__c</fullName>
    <formula>IF(CreatedById =  $User.Id ,TRUE, 
IF(Contact.Email =  $User.Email ,TRUE,
FALSE))</formula>
    <label>CaseOwnerLoggedInUser</label>
    <type>Checkbox</type>
</CustomField>