force-app/main/default/objects/Case/fields/Choose_OS__c.field-meta.xml
<CustomField>
    <fullName>Choose_OS__c</fullName>
    <label>Choose OS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Microsoft Windows 10 64-bit</fullName>
            </value>
            <value>
                <fullName>Microsoft Windows 10 32-bit</fullName>
            </value>
            <value>
                <fullName>Microsoft Windows 8 64-bit</fullName>
            </value>
            <value>
                <fullName>Microsoft Windows 8 32-bit</fullName>
            </value>
            <value>
                <fullName>Microsoft Windows 7 64-bit</fullName>
            </value>
            <value>
                <fullName>Microsoft Windows 7 32-bit</fullName>
            </value>
            <value>
                <fullName>Microsoft Vista 64-bit</fullName>
            </value>
            <value>
                <fullName>Microsoft Vista 32-bit</fullName>
            </value>
            <value>
                <fullName>Microsoft XP 64-bit</fullName>
            </value>
            <value>
                <fullName>Microsoft XP 32-bit</fullName>
            </value>
            <value>
                <fullName>Other Microsoft</fullName>
            </value>
            <value>
                <fullName>Android</fullName>
            </value>
            <value>
                <fullName>Linux/Other Unix</fullName>
            </value>
            <value>
                <fullName>Apple Mac OS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>