force-app/main/default/objects/Case/fields/Community_Contact__c.field-meta.xml
<CustomField>
    <fullName>Community_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Use &quot;Case Collaborators&quot; if you would like a colleague within your Organization to collaborate on this Case. Your colleague will receive an email advising that you would like them to collaborate. The colleague should also be registered to access the NVIDIA Enterprise Support Portal. If they are not registered; you can create &quot;Add User&quot; to invite them to register.</inlineHelpText>
    <label>Case Collaborators</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>