force-app/main/default/objects/Case/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <formula>If(RecordType.Name =&apos;NBU Case&apos;,
Parent.Contact.FirstName &amp; &quot; &quot; &amp; Parent.Contact.LastName,
Contact.FirstName &amp; &quot; &quot; &amp; Contact.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>