force-app/main/default/objects/Case/fields/Containment__c.field-meta.xml
<CustomField>
    <fullName>Containment__c</fullName>
    <label>Containment</label>
    <type>TextArea</type>
</CustomField>