force-app/main/default/objects/Case/fields/Critical__c.field-meta.xml
<CustomField>
    <fullName>Critical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Critical</label>
    <type>Checkbox</type>
</CustomField>