force-app/main/default/objects/Case/fields/Current_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_User_Name__c</fullName>
    <formula>$User.FirstName &amp; &apos; &apos; &amp;  $User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User Name</label>
    <type>Text</type>
</CustomField>