force-app/main/default/objects/Case/fields/Customer_Reported_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reported_Date__c</fullName>
    <description>Original date when issue was reported by the customer to the Partner or NVIDIA</description>
    <inlineHelpText>Original date when issue was reported by the customer to the Partner or NVIDIA</inlineHelpText>
    <label>Customer Reported Date</label>
    <type>Date</type>
</CustomField>