force-app/main/default/objects/Case/fields/Customer_Reported_Symptoms__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reported_Symptoms__c</fullName>
    <label>Customer Reported Symptoms</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>