force-app/main/default/objects/Case/fields/Customer_Survey_Sent__c.field-meta.xml
<CustomField>
    <fullName>Customer_Survey_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is checked when a customer survey is sent. It is used in WF Rules responsible to send Survey Emails.</description>
    <label>Customer Survey Sent</label>
    <type>Checkbox</type>
</CustomField>