force-app/main/default/objects/Case/fields/Customer_System_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_System_Status__c</fullName>
    <label>Customer System Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dead on Arrival (DOA) - Not Installed</fullName>
            </value>
            <value>
                <fullName>Installed but Not Working at All</fullName>
            </value>
            <value>
                <fullName>System has Intermittent Issues</fullName>
            </value>
            <value>
                <fullName>Work-Around in Place</fullName>
            </value>
            <value>
                <fullName>Full Production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>