force-app/main/default/objects/Case/fields/Days_Closed__c.field-meta.xml
<CustomField>
    <fullName>Days_Closed__c</fullName>
    <formula>NOW() - ClosedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of Days Case is in closed status.</inlineHelpText>
    <label>Days Closed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>