force-app/main/default/objects/Case/fields/Days_in_ESP_L3_Queue__c.field-meta.xml
<CustomField>
    <fullName>Days_in_ESP_L3_Queue__c</fullName>
    <description># of days case has been in ESP L3 Queue</description>
    <formula>NOW() -  Time_Assigned_to_L3__c</formula>
    <inlineHelpText># of days case has been in ESP L3 Queue</inlineHelpText>
    <label>Days in ESP L3 Queue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>