force-app/main/default/objects/Case/fields/Delivery_number_DN__c.field-meta.xml
<CustomField>
    <fullName>Delivery_number_DN__c</fullName>
    <label>Delivery number (DN)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>