force-app/main/default/objects/Case/fields/Designated_Engineer_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Designated_Engineer_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag is set when a Case is assigned to Designated Engineer.</description>
    <label>Designated Engineer Assigned</label>
    <type>Checkbox</type>
</CustomField>