force-app/main/default/objects/Case/fields/Destination_Account__c.field-meta.xml
<CustomField>
    <fullName>Destination_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Destination Account Cases</relationshipLabel>
    <relationshipName>Destination_Account_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>