force-app/main/default/objects/Case/fields/Destination_Account_PEC_Number__c.field-meta.xml
<CustomField>
    <fullName>Destination_Account_PEC_Number__c</fullName>
    <formula>Destination_Account__r.SAP_Customer_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination Account PEC Number</label>
    <type>Text</type>
</CustomField>