force-app/main/default/objects/Case/fields/Driver_Version__c.field-meta.xml
<CustomField>
    <fullName>Driver_Version__c</fullName>
    <label>Driver Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>