force-app/main/default/objects/Case/fields/Duration_in_Customer_Status_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Duration_in_Customer_Status_Hrs__c</fullName>
    <description>This field shows how many hours Case is in current status.</description>
    <formula>IF( IsClosed, NULL, (NOW()-Last_Status_Date_Time__c)*24)</formula>
    <label>Duration in Customer Status (Hrs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>