force-app/main/default/objects/Case/fields/Email_Count__c.field-meta.xml
<CustomField>
    <fullName>Email_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Email Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>