force-app/main/default/objects/Case/fields/Engineering_Support_Hours__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Support_Hours__c</fullName>
    <description>SDS-1232 : Service: CUDA Support Services. 
Service Agent should be able to specify consumed Engineering hours on a support case.</description>
    <label>Engineering Support Hours</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>