force-app/main/default/objects/Case/fields/Escalation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Reason__c</fullName>
    <description>ESP : Escalation Reason
If Incident Status moves to Enterprise Support
-	Then Check escalated = True
And write in Incident Sub-status into escalated reason field</description>
    <inlineHelpText>ESP : Escalation Reason
If Incident Status moves to Enterprise Support
-	Then Check escalated = True
And write in Incident Sub-status into escalated reason field</inlineHelpText>
    <label>Escalation Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>