force-app/main/default/objects/Case/fields/Escalation_Time__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Time__c</fullName>
    <description>ESP : Escalation Time
If Incident Status moves to Enterprise Support
-	Then Check escalated = True
-       Escalation Time = current date time</description>
    <inlineHelpText>ESP : Escalation Time
If Incident Status moves to Enterprise Support
-	Then Check escalated = True
-       Escalation Time = current date time</inlineHelpText>
    <label>Escalation Time</label>
    <type>DateTime</type>
</CustomField>