force-app/main/default/objects/Case/fields/ESP_Case_Account_Mismatch__c.field-meta.xml
<CustomField>
    <fullName>ESP_Case_Account_Mismatch__c</fullName>
    <description>ESP : tracks if the Case Contact does not belong to the Case Account</description>
    <formula>AccountId &lt;&gt; Contact.AccountId</formula>
    <inlineHelpText>ESP : tracks if the Case Contact does not belong to the Case Account</inlineHelpText>
    <label>Case - Account Mismatch</label>
    <type>Checkbox</type>
</CustomField>