force-app/main/default/objects/Case/fields/External_Case_Status__c.field-meta.xml
<CustomField>
    <fullName>External_Case_Status__c</fullName>
    <label>External Case Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>