force-app/main/default/objects/Case/fields/Generic_Queue_Reason__c.field-meta.xml
<CustomField>
    <fullName>Generic_Queue_Reason__c</fullName>
    <label>Generic Queue Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>