force-app/main/default/objects/Case/fields/How_would_you_like_to_be_contacted__c.field-meta.xml
<CustomField>
    <fullName>How_would_you_like_to_be_contacted__c</fullName>
    <label>How would you like to be contacted?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
                <default>true</default>
                <label>Email</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>