force-app/main/default/objects/Case/fields/Incident_Status__c.field-meta.xml
<CustomField>
    <fullName>Incident_Status__c</fullName>
    <label>Incident Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Agent Assignment</fullName>
                <default>true</default>
                <label>Awaiting Agent Assignment</label>
            </value>
            <value>
                <fullName>Troubleshooting-Sub</fullName>
            </value>
            <value>
                <fullName>Enterprise Support</fullName>
            </value>
            <value>
                <fullName>With 3rd Party Partner</fullName>
            </value>
            <value>
                <fullName>With Engineering</fullName>
            </value>
            <value>
                <fullName>With RMA</fullName>
            </value>
            <value>
                <fullName>With Engineering + RMA</fullName>
            </value>
            <value>
                <fullName>With NVIDIA non-engineering</fullName>
            </value>
            <value>
                <fullName>New Installation</fullName>
            </value>
            <value>
                <fullName>On-Site RMA Install</fullName>
            </value>
            <value>
                <fullName>Resolved (Temp Workaround)</fullName>
            </value>
            <value>
                <fullName>Resolved (Permanently)</fullName>
            </value>
            <value>
                <fullName>Resolved (No Customer Response)</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Awaiting Customer Information</fullName>
                <isActive>false</isActive>
                <label>Awaiting Customer Information</label>
            </value>
            <value>
                <fullName>Customer Closure</fullName>
                <isActive>false</isActive>
                <label>Customer Closure</label>
            </value>
            <value>
                <fullName>Pending - No Customer Response</fullName>
                <isActive>false</isActive>
                <label>Pending - No Customer Response</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>