force-app/main/default/objects/Case/fields/Incident_Substatus__c.field-meta.xml
<CustomField>
    <fullName>Incident_Substatus__c</fullName>
    <label>Incident Substatus</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Incident_Status__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3rd party software issue</fullName>
            </value>
            <value>
                <fullName>At Customer Site</fullName>
            </value>
            <value>
                <fullName>Change</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Configuration Issue</fullName>
            </value>
            <value>
                <fullName>Contained</fullName>
            </value>
            <value>
                <fullName>Customer Closure</fullName>
            </value>
            <value>
                <fullName>Customer Custom Configuration</fullName>
            </value>
            <value>
                <fullName>Customer Education</fullName>
            </value>
            <value>
                <fullName>Customer Question</fullName>
            </value>
            <value>
                <fullName>Customer request to escalate</fullName>
            </value>
            <value>
                <fullName>Deep Learning SW Defect</fullName>
            </value>
            <value>
                <fullName>Design Flaw</fullName>
            </value>
            <value>
                <fullName>Docker/Container Software or DL</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Documentation Provided</fullName>
            </value>
            <value>
                <fullName>DriveAV SW Defect</fullName>
            </value>
            <value>
                <fullName>DriveSIM SW Defect</fullName>
            </value>
            <value>
                <fullName>Enhancement Request</fullName>
            </value>
            <value>
                <fullName>Entitlement Issue</fullName>
            </value>
            <value>
                <fullName>Environment</fullName>
            </value>
            <value>
                <fullName>Escalated Account</fullName>
            </value>
            <value>
                <fullName>Firmware</fullName>
            </value>
            <value>
                <fullName>Fully Operational</fullName>
            </value>
            <value>
                <fullName>GFNA Escalation to Incident Managers</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>HW Replacement (RMA)</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Known Issue</fullName>
            </value>
            <value>
                <fullName>License Server Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>