force-app/main/default/objects/Case/fields/IncStatusSubStatusPopulated__c.field-meta.xml
<CustomField>
    <fullName>IncStatusSubStatusPopulated__c</fullName>
    <formula>if( RecordType.DeveloperName = &quot;Community_User_Record_Type&quot; &amp;&amp;(ISPICKVAL( Incident_Status__c ,&quot;Enterprise Support&quot;) || ISPICKVAL( Incident_Status__c ,&quot;Closed&quot;) || ISPICKVAL( Incident_Status__c ,&quot;Resolved (Temp Workaround)&quot;) || ISPICKVAL( Incident_Status__c ,&quot;Resolved (Permanently)&quot;) || ISPICKVAL( Incident_Status__c ,&quot;Resolved (No Customer Response)&quot;)) &amp;&amp; ISBLANK( TEXT(Incident_Substatus__c )),false,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IncStatusSubStatusPopulated</label>
    <type>Checkbox</type>
</CustomField>