force-app/main/default/objects/Case/fields/Is_Skip_Assignment_Rule__c.field-meta.xml
<CustomField>
    <fullName>Is_Skip_Assignment_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Skip Assignment Rule</label>
    <type>Checkbox</type>
</CustomField>