force-app/main/default/objects/Case/fields/IsEscalated__c.field-meta.xml
<CustomField>
    <fullName>IsEscalated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ESP : IsEscalated, If Incident Status moves to Enterprise Support, Then Check escalated = True</description>
    <inlineHelpText>ESP : IsEscalated, If Incident Status moves to Enterprise Support, Then Check escalated = True</inlineHelpText>
    <label>IsEscalated</label>
    <type>Checkbox</type>
</CustomField>