force-app/main/default/objects/Case/fields/L1_L2_Owner__c.field-meta.xml
<CustomField>
    <fullName>L1_L2_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field holds the name of Most recent L1/L2 Owner (user) name.</description>
    <label>L1/L2 Owner User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>