force-app/main/default/objects/Case/fields/Last_Activity_By_User__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_By_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Activity by User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RecentlyUpdatedCases</relationshipName>
    <type>Lookup</type>
</CustomField>