force-app/main/default/objects/Case/fields/Last_Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Type__c</fullName>
    <label>Last Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Case Comment</fullName>
            </value>
            <value>
                <fullName>Attachment</fullName>
            </value>
            <value>
                <fullName>Email Message</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>