force-app/main/default/objects/Case/fields/Last_Activity_User_Email__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_User_Email__c</fullName>
    <description>This field is get auto populated with the name of User who did last communication on Case either via Case Comment or Email.</description>
    <label>Last Activity User Email</label>
    <type>Email</type>
</CustomField>