force-app/main/default/objects/Case/fields/Last_Activity_User_Type__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_User_Type__c</fullName>
    <description>This field captures the type of user by whom the last activity was performed.</description>
    <label>Last Activity User Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>