force-app/main/default/objects/Case/fields/Last_Current_Owner_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Current_Owner_Date_Time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Last Current Owner Date/Time</label>
    <type>DateTime</type>
</CustomField>