force-app/main/default/objects/Case/fields/Last_Incident_Status_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Incident_Status_Date_Time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Last Incident Status Date/Time</label>
    <type>DateTime</type>
</CustomField>