force-app/main/default/objects/Case/fields/Last_Status_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Status_Date_Time__c</fullName>
    <description>This field is auto populated to store the Date/Time when Case Status was last updated.</description>
    <label>Last Status Date/Time</label>
    <type>DateTime</type>
</CustomField>