force-app/main/default/objects/Case/fields/Learnings__c.field-meta.xml
<CustomField>
    <fullName>Learnings__c</fullName>
    <label>Learnings</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>