force-app/main/default/objects/Case/fields/Manager_to_Approve_New_user_Setup__c.field-meta.xml
<CustomField>
    <fullName>Manager_to_Approve_New_user_Setup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who is the manager who will approve this new user being setup?</inlineHelpText>
    <label>Manager to Approve New user Setup</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>