force-app/main/default/objects/Case/fields/Match_New_User_Permissions_to_this_User__c.field-meta.xml
<CustomField>
    <fullName>Match_New_User_Permissions_to_this_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This user will be used as the template for the new user being setup</inlineHelpText>
    <label>Match New User Permissions to this User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>