force-app/main/default/objects/Case/fields/Milestone_Status__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Status__c</fullName>
    <description>This field gets updated from Milestone actions to perform necessary actions (Send Email) from Case.</description>
    <label>Milestone Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>