force-app/main/default/objects/Case/fields/Name_of_New_User__c.field-meta.xml
<CustomField>
    <fullName>Name_of_New_User__c</fullName>
    <inlineHelpText>Please provide the full name of the new user being requested</inlineHelpText>
    <label>Name of New User</label>
    <length>60</length>
    <type>Text</type>
</CustomField>