force-app/main/default/objects/Case/fields/NBU_Case_Id__c.field-meta.xml
<CustomField>
    <fullName>NBU_Case_Id__c</fullName>
    <label>NBU Case Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>