force-app/main/default/objects/Case/fields/NBU_Case_Link__c.field-meta.xml
<CustomField>
    <fullName>NBU_Case_Link__c</fullName>
    <formula>HYPERLINK(&quot;https://mellanox.lightning.force.com/lightning/r/Case/&quot;&amp; NBU_Case_Id__c&amp;&quot;/view&quot;, NBU_Case_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NBU Case Link</label>
    <type>Text</type>
</CustomField>