force-app/main/default/objects/Case/fields/NBU_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>NBU_Case_Number__c</fullName>
    <label>NBU Case Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>