force-app/main/default/objects/Case/fields/NBU_Case_Ref_ID__c.field-meta.xml
<CustomField>
    <fullName>NBU_Case_Ref_ID__c</fullName>
    <label>NBU Case Ref ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>