force-app/main/default/objects/Case/fields/NBU_Customer_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>NBU_Customer_Tracking_Number__c</fullName>
    <label>NBU Customer Tracking Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>