force-app/main/default/objects/Case/fields/NBU_Engineer__c.field-meta.xml
<CustomField>
    <fullName>NBU_Engineer__c</fullName>
    <label>NBU Engineer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>